fix: hide ScrollDownButton on smaller screens for better responsiveness

--- a/src/components/ScrollDownButton/ScrollDownButton.module.scss
+++ b/src/components/ScrollDownButton/ScrollDownButton.module.scss
@@ -55,6 +55,10 @@
 
 @media screen and (max-width: 768px) {
   .button {
+    display: none;
+  }
+
+  .button {
     bottom: 1rem;
   }
 
